1222. 可以攻击国王的皇后 (Queens That Can Attack the King)